add results comparison function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> How about a rock paper scissors game ?</h1>
-    <h2 class="result"></h2>
+    <h2 id="result">Who will win?</h2>
     <div class="img-container">
         <div id="computerchoice">
             <h3 >Computer's choice</h3>
