--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="img-container">
         <div id="computerchoice">
             <h3 >Computer's choice</h3>
-            <img src="./public/rock-paper-scissors.png" width="400px">
+            <img src="./public/rock-paper-scissors.png"  >
         </div>
         <div id="yourchoice">
             <h3 >Your choice</h3>
-            <img src="./public/rock-paper-scissors.png" width="400px">
+            <img src="./public/rock-paper-scissors.png" >
         </div>
     </div>
     <div class="choices">
